kotlin to java migration (code convention)